# easy-aws-login

./: .pre-commit-config.yaml  BUILD.md  Pipfile  README.md  build.sh  buildspec.yml  pyproject.toml  release.sh  requirements-dev.txt  setup.py
.github/: dependabot.yml
easy_aws_login/: __init__.py  __version__.py  index.py
