[project]
name = "easy-aws-login"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.9.133",
    "requests>=2.31.0",
    "urllib3>=2.3.0,<2.4",
]

[dependency-groups]
dev = [
    "pyperclip",
    "pyperclip",
]

[tool.uv.sources]
